[package]
name = "scrabber"
version = "0.1.0"
edition = "2021"
authors = ["Ari Vidar Johannesson <arividar@gmail.com>"]

[dependencies]
image = "0.24"
ctrlc = "3.2"
chrono = "0.4"
clap = {version="4.0", features=["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8"
fs = "0.0"
screenshots = { git = "https://github.com/nashaofu/screenshots-rs.git" }
