[package]
name = "scrabber"
version = "0.1.0"
edition = "2021"
authors = ["Ari Vidar Johannesson <arividar@gmail.com>"]

[dependencies]
scraper = "0.20.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
image = { version = "0.24", features = ["png"] }
screenshots = { git = "https://github.com/nashaofu/screenshots-rs.git" }
clap = "4.4.8"
ctrlc = "3.2"
serial_test = "1"

[dev-dependencies]
tempfile = "3.20.0"
vfs = "0.9"
